# ECLIPSE

./: .gitignore  chat.md  chat2.md  chat3.md  chat4.md  chat5.md  context.md  docker-compose.yml  update_admin_gcp.py
artifact3.0/: implementation_plan.md  implementation_plan.md.metadata.json  (+10 more)
server/: Dockerfile  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  purge.py  pyproject.toml
server/app/: celery_worker.py  main.py
server/app/api/v1/: admin.py  billing.py  jobs.py  nodes.py  router.py  users.py  websocket.py
server/app/assembler/: data_assembler.py  ml_assembler.py  render_assembler.py  sim_assembler.py
server/app/core/: config.py  database.py  redis.py  security.py
server/app/models/: __init__.py  base.py  billing.py  chunk.py  image.py  job.py  node.py  user.py
server/app/pipeline/: analyzer.py  builder.py  catalog.py  detector.py  generator.py  orchestrator.py  security.py  splitter.py  verifier.py
server/app/scheduler/: dispatcher.py  matcher.py  network_manager.py  watchdog.py
server/app/schemas/: job.py  node.py  user.py  ws_messages.py
server/app/services/: billing_service.py  minio_service.py
server/app/utils/: gamification.py  gpu_benchmarks.py
server/docker/images/openfoam/: Dockerfile
server/docker/images/python-data/: Dockerfile
server/docker/images/pytorch-cuda12/: Dockerfile
server/docker/wrappers/: entrypoint_wrapper.sh  local_sgd_wrapper.py  ml_checkpoint_wrapper.py
server/migrations/: env.py
server/migrations/versions/: 142fca2bd4e9_initial_migration.py  786f26d5b694_add_requires_public_network_to_jobs.py
(+135 files in other folders)
